# clap-audio-plugin-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  compile_commands.sh  justfile  package.json  pnpm-lock.yaml
models/: RR Brit 1959 Jump 57.nam  amp_drive.nam
src/: channel.rs  descriptor.rs  entry.rs  factory.rs  helper.rs  host_notifier.rs  lib.rs  nam.cpp  nam.h  plugin.rs  state.rs  version.rs
src/actions/: any.rs  load_model.rs  mod.rs
src/dsp/: dc_filter.rs  klon_buffer.rs  lowpass_filter.rs  mod.rs  nam.cpp  nam.h  nam.rs
src/extensions/: audio_ports.rs  gui.rs  mod.rs  parameters.rs  state.rs
src/gestures/: action.rs  click.rs  drag.rs  mod.rs
src/gui/: colors.rs  composition.rs  entry.html  gpu.rs  gui.html  helpers.rs  layout.html  layout.rs  mod.rs  parameter.rs  platform.rs  state.rs  text.rs  view.rs  widget.rs  window_handler.rs
src/gui/app/: dispatcher.rs  layout.rs  mod.rs  state.rs
src/gui/app/components/: header.rs  mod.rs  nam_model_selector.rs  parameters.rs
src/gui/app/style/: index.css
src/gui/atoms/: knob.rs
src/gui/components/: input_gain_knob.rs  mod.rs  output_gain_knob.rs
src/gui/layout/: index.css  index.html
src/gui/parameters/: any.rs  input_gain.rs  mod.rs  output_gain.rs
src/nam/: mod.rs  state.rs
src/parameters/: any.rs  base.rs  blend.rs  input_gain.rs  load_model.rs  mod.rs  output_gain.rs  tone.rs
src/processors/: handle_clap_event.rs  handle_gui_event.rs  handle_ui_event.rs  mod.rs  render_audio.rs  send_ui_event.rs  sync_audio_to_main.rs  sync_main_to_audio.rs
