[package]
name = "nam_player"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1.9.1"
baseview = { git = "https://github.com/RustAudio/baseview" }
anyrender_vello = "0.8"
blitz-dom = { git = "https://github.com/DioxusLabs/blitz" }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", default-features = false }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", default-features = false }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", default-features = false }
cxx = "1.0.194"
pollster = "0.4.0"
raw-window-handle = "0.5"
vello = "0.8.0"
wgpu = "28.0.0"
crossbeam-queue = "0.3"
smallvec = "1.15.1"

[build-dependencies]
bindgen = "0.72.1"
cxx-build = "1.0.194"

[lints.clippy]
unwrap_used = "deny"
